<resources>
    <string name="app_name">CricGeek</string>
    <string name="check_score">Please check your score below</string>
    <string name="welcome_text">Welcome to CricGeek. Test your knowledge of Cricket by facing some Googlys.</string>
    <string name="next">Next</string>
    <string name="click_to_finish_the_test">Click to Finish the Test</string>
    <string name="start_test">Start Test</string>
    <string name="test_score">Test score</string>
    <string name="your_score">Your Score is :\ </string>
    <string name="alert_ask_email">\nDo you want wish to email your score?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="end_test_toast">Please Click on Submit to Finish</string>
    <string name="mail_intent">mailto:</string>
    <string name="email_subject">Score for CricGeek</string>
    <string name="email_body">Thank You for choosing CrickGeek.\nScore :\ </string>
    <string name="email_signature">\n\n\n --Team CrickGeek</string>
    <string name="dialog_negative_button_string">Thank You for Choosing CricGeek.</string>
    <string name="question11">Select Countries who have won an ICC ODI World Cup (50 overs format.)</string>
    <string name="q11_optionOne">India</string>
    <string name="q11_optionTwo">Pakistan</string>
    <string name="q11_optionThree">South Africa</string>
    <string name="q11_optionFour">New Zealand</string>
    <string name="question12">Name the two small items which sit on top of the stumps.</string>
    <string name="enter_your_answer_here">Enter your Answer Here</string>
</resources>